--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "react-paystack-embed",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "This is an reactJS library for implementing paystack payment gateway",
-  "main": "src/PayStack.js",
+  "main": "dist/PayStack.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel src/PayStack.js -d PayStack.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,10 @@
   },
   "homepage": "https://github.com/codinglawyer/react-paystack#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-env": "^2.4.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
